--- a/package.json
+++ b/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "next": "12.1.6",
     "reac": "^0.0.0",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
+    "react-popper": "^2.3.0",
     "react-router-dom": "^6.3.0",
     "sass": "^1.52.3",
+    "sweetalert2": "^11.4.24",
     "swiper": "^8.2.4"
   },
   "devDependencies": {
